--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guitar Chords Sheet</title>
+    <title>ChordSheet Studio</title>
     <meta name="description" content="Create professional guitar chord sheets with lyrics" />
   </head>
   <body>
